Fixed header alignment issues at certain pixel sizes

--- a/src/cinematography/Cinematography.css
+++ b/src/cinematography/Cinematography.css
@@ -248,6 +248,13 @@ p {
   width: 59px;
 }
 
+@media (max-width: 1514px) and (min-width: 769px) {
+  #header {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+
 @media (max-width: 768px) {
   h1 {
     display: flex;
