--- a/src/photography/Photography.css
+++ b/src/photography/Photography.css
@@ -133,7 +133,6 @@ body.menu-active #menu {
   scrollbar-color: #5d4a3ce8 #846855e8;
 }
 
-
 .scrollable-wrapper::-webkit-scrollbar {
   width: 10px;
   height: 10px;
@@ -266,6 +265,20 @@ body.menu-active #menu {
 #InstagramImage {
   height: 34px;
   width: 59px;
+}
+
+@media (min-width: 1515px) {
+  #header {
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+}
+
+@media (max-width: 1514px) and (min-width: 769px) {
+  #header {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -473,7 +486,6 @@ body.menu-active #menu {
 }
 
 @media (max-width: 480px) {
-
   body {
     overflow-x: hidden;
   }
@@ -518,12 +530,12 @@ body.menu-active #menu {
   body.menu-active {
     overflow-x: hidden;
   }
-  
+
   body.menu-active #barsContainer {
     top: 20px;
     right: 10px;
   }
-  
+
   body.menu-active #menu {
     top: 0;
     height: 78px;
